fixed alignment of updated and published details for hitech template

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
@@ -1,5 +1,9 @@
 .navigation {
   margin: 0 1.25rem;
+	.navigation-title {
+        display:none;
+    	padding: 0.5rem 0;
+	} 
   .cmp-navigation {
   	padding-left:0;
   }
