--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/navigation2.less
@@ -32,3 +32,11 @@
     }
   }
 }
+
+#gu-nav.show {
+    .navigation {
+        .navigation-title {
+			display:block;
+        }
+    }
+}
